--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello ! 你好 !
+<meta
+  name="viewport"
+  content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,viewport-fit=cover"
+/>
+
+<button onclick="shareTel()">分享tel</button>
+
+<script>
+  const shareTel = () => {
+    const allText = "你好，https://baidu.com";
+    const image = "https://cdn.lotterybox.com/mobile/assets/share.png";
+    const url = `tg://msg_url?text=${encodeURIComponent(
+      allText
+    )}&url=${encodeURIComponent(image)}`;
+    console.log(url);
+  };
+</script>
