--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <meta
+  property="og:image"
+  content="https://cdn.lotterybox.com/mobile/assets/share.png"
+/>
+<meta
   name="viewport"
   content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,viewport-fit=cover"
 />
