--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <button onclick="shareWhatsApp()">分享whatsapp</button>
 
 <script>
-  const allText = "你好，https://baidu.com";
+  const allText = "你好，https://bravf.github.io/";
   const image = "https://cdn.lotterybox.com/mobile/assets/share.png";
   const shareTel = () => {
     // const url = `tg://msg_url?text=${encodeURIComponent(
