--- a/index.html
+++ b/index.html
@@ -10,21 +10,28 @@
     />
   </head>
   <body>
-    <button onclick="shareTel()">分享tel</button>
-    <button onclick="shareWhatsApp()">分享whatsapp</button>
+    <div>
+      <button onclick="getToken">getToken:</button>
+      <span id="token"></span>
+    </div>
+    <div>
+      <button onclick="toRecharge()">toRecharge</button>
+    </div>
+    <div>
+      <button onclick="toWithdraw()">toWithdraw</button>
+    </div>
   </body>
   <script>
-    const allText = "你好，https://bravf.github.io/";
-    const image = "https://cdn.lotterybox.com/mobile/assets/share.png";
-    const shareTel = () => {
-      const url = `tg://msg?text=${encodeURIComponent(allText)}`;
-      location.href = url;
-    };
-    const shareWhatsApp = () => {
-      const url = `whatsapp://send?text=${encodeURIComponent(
-        allText
-      )}&image=${encodeURIComponent(image)}`;
-      location.href = url;
-    };
+    function getToken() {
+      window.common.getToken((token) => {
+        document.querySelector("#token").innerHTML = token;
+      });
+    }
+    function toRecharge() {
+      window.common.toRecharge();
+    }
+    function toWithdraw() {
+      window.common.toWithdraw();
+    }
   </script>
 </html>
