--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no,viewport-fit=cover"
     />
   </head>
+  <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
   <body>
     <div>
       <button onclick="getToken">getToken:</button>
@@ -22,6 +23,7 @@
     </div>
   </body>
   <script>
+    new window.VConsole();
     function getToken() {
       window.common.getToken((token) => {
         document.querySelector("#token").innerHTML = token;
