--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div>
       <button onclick="toWithdraw()">toWithdraw</button>
     </div>
+    <div>
+      <button onclick="toLogin()">toLogin</button>
+    </div>
   </body>
   <script>
     new window.VConsole();
@@ -34,6 +37,9 @@
     }
     function toWithdraw() {
       window.Native.toWithdraw();
+    }
+    function toLogin() {
+      window.Native.toLogin();
     }
   </script>
 </html>
