--- a/index.html
+++ b/index.html
@@ -102,7 +102,20 @@
       }
     })();
   </script>
+  <style type="text/css">
+    div {
+      margin-top: 10px;
+    }
+    button {
+      display: block;
+      width: 100%;
+      height: 48px;
+    }
+  </style>
   <body>
+    <div>
+      <button onclick="startGame()">开始游戏</button>
+    </div>
     <div>
       <button onclick="getToken()">getToken:</button>
       <span id="token"></span>
@@ -143,6 +156,9 @@
   </body>
   <script>
     new window.VConsole();
+    function startGame() {
+      location.href = "https://qa-13.232.26.141.nip.io/dist/?app=1";
+    }
     function getToken() {
       const token = dsBridge.call("Native.getToken");
       document.querySelector("#token").innerHTML = token;
