--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     function startGame() {
       location.href = "https://qa-13.232.26.141.nip.io/dist/?app=1";
     }
-    function startGame() {
+    function startGame2() {
       location.href = "https://qa-13.232.26.141.nip.io/dist/?app=1#/login";
     }
     function getToken() {
