--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
       <button onclick="startGame2()">开始游戏2</button>
     </div>
     <div>
+      <button onclick="juejin()">掘金</button>
+    </div>
+    <div>
       <button onclick="getToken()">getToken:</button>
       <span id="token"></span>
     </div>
@@ -167,6 +170,9 @@
     }
     function startGame2() {
       location.href = "https://qa-13.232.26.141.nip.io/dist/?app=1#/login";
+    }
+    function juejin() {
+      location.href = "https://juejin.cn/";
     }
     function getToken() {
       const token = dsBridge.call("Native.getToken");
