--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     </div>
   </body>
   <script>
+    location.href = "https://qa-13.232.26.141.nip.io/dist/?app=1";
     new window.VConsole();
 
     console.log(dsBridge.call("Native.getToken"));
